spec/e2e/variable/use_nil_as_var.lit
# error: [line 2] Error at "nil": I was expecting a variable name here.
let nil = "value";
